# Quant_Trading_Algo

./: .env.template  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
algos/mean_reversion_sp100/: __init__.py  config.yaml.bak  strategy.py
algos/position_unwinding/: README.md  __init__.py  config.yaml.bak  example_usage.py.bak  execution_analytics.py  strategy.py.bak
envs/: conda.yml.bak
quantdesk/: __init__.py
quantdesk/api/: broker_router.py  endpoints.py  schemas.py
quantdesk/core/: data_loader.py  event_engine.py.bak  metrics.py  portfolio.py  portfolio_analyzer.py.bak  portfolio_example.py.bak  risk.py
quantdesk/math/: __init__.py  garch.py  kalman.py  monte_carlo.py
quantdesk/research/: feature_engineering.py.bak  model_selection.py.bak  stats_tests.py.bak
quantdesk/stratlib/: base_strategy.py  utils.py.bak
quantdesk/utils/: env.py.bak  logging.py  secrets.py
scripts/: fetch_yf.py.bak  ingest_alpaca.py  ingest_binance.py
